<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="okay">Okay (15%)</string>
    <string name="round_up">Round up tip?</string>
    <string name="calculate_button">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="cost_of_sercice">Cost of Service</string>
    <string name="formated_tip">Tip Amount: %s</string>
</resources>